--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-swipeable": "^7.0.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.19.0"
   },
