--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "vanilla-tilt": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
