--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.19.0",
     "vanilla-tilt": "^1.8.0"
