--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@react-three/drei": "^9.57.0",
+    "@react-three/fiber": "^8.11.7",
     "daisyui": "^2.51.3",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^7.6.7",
+    "maath": "^0.5.2",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,6 +25,7 @@
     "react-slick": "^0.29.0",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
+    "three": "^0.150.1",
     "typewriter-effect": "^2.19.0",
     "vanilla-tilt": "^1.8.0"
   },
